# orr_backend

./: .dockerignore  .env.example  .gcloudignore  .gitignore  ADMIN_PORTAL_COMPLETE.md  ADMIN_PORTAL_README.md  BILLING_FIX_SUMMARY.md  Dockerfile  Dockerfile.dev  Procfile  README.md  TESTING_README.md  api_test.json  check_api.py  check_db_state.py  check_faqs.py  check_prod_data.py  check_strategic_advisory_details.py  check_wallets.py  cleanup_orphaned_data.py  cleanup_test_data.py  create_cms_seed_data.py  create_service_pillar_content.py  create_service_pillar_data.py  create_test_admin.py  create_test_payment_data.py  db_health_check.py  debug_cms_data.py  debug_db_issue.py  debug_fields.py  debug_output.txt  debug_output_full.txt  debug_urls.py  deploy_staging.sh  diagnose_500.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.dev.sh  entrypoint.sh  extract_howweoperate.py  (+55 more)
admin_portal/: admin.py  apps.py  auto_reply_service.py  cms_utils.py  email_service.py  fields.py  models.py  models_cms.py  payment_ticket_service.py  permissions.py  services.py  signals.py  tasks.py  translation.py  urls.py  views.py  views_google.py
blog/: admin.py  models.py
client/: apps.py  models.py  signals.py  utils.py
common/: auth_views.py  middleware.py  models.py  permissions.py  response.py  serializers.py  tasks.py  urls.py  views.py
contact/: admin.py  apps.py  models.py  signals.py  tasks.py
core/: celery.py  urls.py
google_credentials/: google-calendar-credentials.json  google-docs-credentials.json  google-email-credentials.json
main/: admin.py  apps.py  models.py  signals.py  tasks.py
notification/: dispatcher.py  models.py  tasks.py  utils.py
organization/: models.py
orr_backend/: manage.py
payment/: admin.py  tasks.py  (+2 more)
(+253 files in other folders)
