[tool.poetry]
name = "orr-backend"
version = "0.1.0"
description = ""
authors = ["olamide <olamoyegunolamidesammy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.8"
djangorestframework = "^3.16.1"
python-decouple = "^3.8"
celery = "^5.5.3"
redis = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
