[tool.poetry]
name = "orr-backend"
version = "0.1.0"
description = ""
authors = ["olamide <olamoyegunolamidesammy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.8"
djangorestframework = "^3.16.1"
python-decouple = "^3.8"
celery = "^5.5.3"
redis = "^7.0.1"
psycopg2-binary = "^2.9.11"
django-rest-swagger = "^2.2.0"
drf-spectacular = "^0.29.0"
coloredlogs = "^15.0.1"
colorlog = "^6.10.1"
pillow = "^12.0.0"
djangorestframework-simplejwt = "^5.5.1"
drf-yasg = "^1.21.11"
stripe = "^14.0.1"
gunicorn = "^23.0.0"
django-cors-headers = "^4.9.0"
whitenoise = "^6.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
